--- a/shared/ui/src/lib/components/text-input/text-input.html
+++ b/shared/ui/src/lib/components/text-input/text-input.html
@@ -1,1 +1,1 @@
-<input class="uk-input uk-form-width-large" type="text" placeholder="Input" aria-label="Input">
+<input class="uk-input" type="text" placeholder="Descreva sua atividade..." aria-label="Input">
